was finished about/contact functional

--- a/app/views/demo/about.html.erb
+++ b/app/views/demo/about.html.erb
@@ -15,13 +15,13 @@
   <p>
     Sit placeat sint veniam voluptate eum ducimus 
     Dolor corporis quibusdam placeat rerum rem
-  </p>
+  </p><br><hr>
 
   <h4>Contact:</h4>
 
   <p>We are always to hear from our customers.</p>
 
-  <p><strong>Phone: <%= @phone %></strong></p>
+  <p><strong>Phone: <%= @country %></strong></p>
 
   <p>Press: <%= link_to('Contact Page', {
     action: 'contact',
