--- a/app/views/demo/contact.html.erb
+++ b/app/views/demo/contact.html.erb
@@ -10,7 +10,9 @@
   <p>
     Lorem ipsam rem illum accusantium architecto. 
     Natus est necessitatibus totam reiciendis saepe consequuntur?
-  </p><br>
+  </p><br><hr>
+
+  <p>Press: <%= mail_to('example@email.com') %></p>
 
   <h4>Our Number in: <%= params[:id].upcase %></h4>
   <p><strong>Phone: <%= @country %></strong></p>
