finished edit/update action

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -21,7 +21,7 @@
       <td class="center"><%= subj.pages.size %></td>
       <td class="actions">
         <%= link_to('Show', subject_path(subj), :class => 'action_show') %>
-        <%= link_to('Edit', '#', :class => 'action_edit') %>
+        <%= link_to('Edit', edit_subject_path(subj), :class => 'action_edit') %>
         <%= link_to('Delete', '#', :class => 'action_delete') %>
       </td>
     </tr>
