--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Subjects#edit</h1>
-<p>Find me in app/views/subjects/edit.html.erb</p>
+<%= link_to('<< Back to List', subjects_path, :class => 'back_link') %>
+
+<div class="subjects edit">
+  <h2>Update Subject</h2>
+
+  <%= form_for(@subject) do |form| %>
+
+    <table summary="Subject from Fields">
+      <tr>
+        <th>Name</th>
+        <td><%= form.text_field(:name) %></td>
+      </tr>
+      <tr>
+        <th>Position</th>
+        <td><%= form.text_field(:position) %></td>
+      </tr>
+      <tr>
+        <th>Visible</th>
+        <td><%= form.text_field(:visible) %></td>
+      </tr>
+    </table>
+
+    <div class="form-buttons">
+      <%= form.submit('Update Subject') %>
+    </div>
+
+  <% end %>
+</div>
