--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -5,20 +5,7 @@
 
   <%= form_for(@subject, :url => subjects_path, :method => 'post') do |form| %>
 
-    <table summary="Subject from Fields">
-      <tr>
-        <th>Name</th>
-        <td><%= form.text_field(:name) %></td>
-      </tr>
-      <tr>
-        <th>Position</th>
-        <td><%= form.text_field(:position) %></td>
-      </tr>
-      <tr>
-        <th>Visible</th>
-        <td><%= form.text_field(:visible) %></td>
-      </tr>
-    </table>
+    <%= render(:partial => 'form', :locals => { :form => form }) %>
 
     <div class="form-buttons">
       <%= form.submit('Create Subject') %>
