--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -22,7 +22,7 @@
       <td class="actions">
         <%= link_to('Show', subject_path(subj), :class => 'action_show') %>
         <%= link_to('Edit', edit_subject_path(subj), :class => 'action_edit') %>
-        <%= link_to('Delete', '#', :class => 'action_delete') %>
+        <%= link_to('Delete', delete_subject_path(subj), :class => 'action_delete') %>
       </td>
     </tr>
   <% end %>
